tests/contract_testcases/polkadot/contracts/contract_name.sol
contract test {
            function test() public {}
        }
// ---- Expect: diagnostics ----
// error: 2:13-35: function cannot have same name as the contract
